i007: Adding viewport context

--- a/components/EventCard/EventCard.module.scss
+++ b/components/EventCard/EventCard.module.scss
@@ -1,6 +1,6 @@
 .EventCard {
-  width: 350px;
-  height: 350px;
+  width: 250px;
+  height: 250px;
   border: 1px solid black;
 
   display: flex;
@@ -11,6 +11,7 @@
   margin-bottom: 20px;
   margin-right: 10px;
   margin-left: 10px;
+  text-align: center;
 }
 
 .container {
@@ -33,5 +34,5 @@
 }
 
 .EventCard__BgImgContainer:hover {
-  opacity: 0.75;
+  opacity: 1;
 }
