--- a/pages/event/event.module.scss
+++ b/pages/event/event.module.scss
@@ -2,9 +2,12 @@
   display: flex;
   text-align: center;
   flex-direction: row;
-  min-width: 80vw;
+  @media #{$desktop}, #{$tablet-landscape} {
+    min-width: 768px;
+  }
   justify-content: space-around;
   @media #{$mobile}, #{$tablet-portrait} {
+    min-height: 650px;
     flex-direction: column;
   }
 }
