--- a/pages/event/event.module.scss
+++ b/pages/event/event.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   text-align: center;
   flex-direction: row;
+  margin-top: 20px;
   @media #{$desktop}, #{$tablet-landscape} {
     min-width: 768px;
   }
