i035: Adding songs to playlist

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -135,7 +135,11 @@ a:active {
 .text-big {
   font-size: 1.5rem;
 }
+// Padding
 
+.p-10 {
+  padding: 10px;
+}
 // Margin
 .m-10 {
   margin: 10px;
