i037: Link to event details page

--- a/components/SpotifyWebPlayer/SpotifyWebPlayer.module.scss
+++ b/components/SpotifyWebPlayer/SpotifyWebPlayer.module.scss
@@ -4,6 +4,11 @@
   left: 0;
   right: 0;
   background-color: lightgray;
-  height: 100px;
+  height: 120px;
   border-top: 1px solid darkgray;
+}
+
+.webPlayerItem {
+  flex-basis: 30%;
+  text-align: center;
 }
