i037: Added queue page

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -47,9 +47,17 @@ a:active {
 }
 
 main {
-  height: calc(100vh - 100px);
   overflow-y: scroll;
   padding: 20px 0;
+
+  // Needs to match player height; see SpotifyWebPlayer.module.scss
+  @media #{$mobile} {
+    height: calc(100vh - 140px);
+  }
+
+  @media #{$desktop}, #{$tablet} {
+    height: calc(100vh - 100px);
+  }
 }
 /* "Tailwind" Classes */
 
@@ -111,6 +119,10 @@ main {
   height: 100%;
 }
 
+.mw-30 {
+  max-width: 50%;
+}
+
 // Position
 .pos-relative {
   position: relative;
@@ -148,6 +160,13 @@ main {
 // Margin
 .m-10 {
   margin: 10px;
+}
+.mr-10 {
+  margin-right: 10px;
+}
+
+.ml-10 {
+  margin-left: 10px;
 }
 
 .m-20 {
