--- a/components/SpotifyWebPlayer/SpotifyWebPlayer.module.scss
+++ b/components/SpotifyWebPlayer/SpotifyWebPlayer.module.scss
@@ -1,14 +1,36 @@
-.spotifyWebPlayer {
+.spotifyWebPlayerContainer {
   position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
   background-color: lightgray;
-  height: 120px;
   border-top: 1px solid darkgray;
+
+  @media #{$mobile} {
+    height: 140px;
+  }
+
+  @media #{$desktop}, #{$tablet} {
+    height: 100px;
+  }
+}
+
+.SpotifyWebPlayer {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  justify-content: space-around;
+  padding: 10px;
+
+  @media #{$mobile} {
+    flex-direction: column;
+  }
 }
 
 .webPlayerItem {
-  flex-basis: 30%;
   text-align: center;
+
+  @media #{$desktop}, #{$tablet} {
+    flex-basis: 30%;
+  }
 }
