--- a/pages/event/event.module.scss
+++ b/pages/event/event.module.scss
@@ -11,3 +11,45 @@
     flex-direction: column;
   }
 }
+
+.eventDetailsNavBar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+
+  @media #{$desktop}, #{$tablet} {
+    padding: 15px;
+    height: 110px;
+  }
+
+  @media #{$mobile} {
+    background-color: whitesmoke;
+    opacity: 0.95;
+    padding: 5px;
+    height: 80px;
+  }
+}
+
+.eventDetailsHeader {
+  text-align: center;
+  @media #{$mobile} {
+    margin-top: 70px;
+  }
+}
+
+.BackBtn {
+  cursor: pointer;
+  margin-top: -20px;
+}
+
+.BackBtnLoading {
+  svg {
+    stroke: lightgray;
+  }
+}
