--- a/components/SpotifyWebPlayer/SpotifyWebPlayer.module.scss
+++ b/components/SpotifyWebPlayer/SpotifyWebPlayer.module.scss
@@ -28,11 +28,14 @@
 }
 
 @keyframes horizontal-scroll {
-  from {
+  0% {
     transform: translateX(0%);
   }
-  to {
-    transform: translateX(-100%);
+  30% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-120%);
   }
 }
 
