i045: More tailwindcss configuration

--- a/components/LocationPicker/LocationPicker.module.scss
+++ b/components/LocationPicker/LocationPicker.module.scss
@@ -1,13 +1,13 @@
-.LocationPickerInput {
-  border: none;
-  border-bottom: 1px gray solid;
-  outline: none;
-  font-size: 1rem;
-  color: var(--text-color);
-  margin: auto;
-  text-align: center;
-  background-color: transparent;
-}
+// .LocationPickerInput {
+//   border: none;
+//   border-bottom: 1px gray solid;
+//   outline: none;
+//   font-size: 1rem;
+//   // color: var(--text-color);
+//   // margin: auto;
+//   // text-align: center;
+//   // background-color: transparent;
+// }
 
 .LocationSuggestion {
   display: block;
