--- a/styles/DatePicker.scss
+++ b/styles/DatePicker.scss
@@ -3,12 +3,24 @@
   font-family: #{$BebasNeue-Regular};
   background-color: transparent;
   cursor: pointer;
+  font-size: 3rem;
+  color: #f7fafc;
 }
 
 .DateInput {
   background-color: transparent;
+  width: 200px;
+}
+
+.DateInput_input {
+  text-decoration: underline 1px;
 }
 
 .SingleDatePickerInput {
   background-color: transparent;
+  @media #{$mobile} {
+    margin-left: -21px;
+    margin-top: -9px;
+    margin-bottom: 6px;
+  }
 }
