i045: Adding icons and updating theme

--- a/styles/DatePicker.scss
+++ b/styles/DatePicker.scss
@@ -4,7 +4,7 @@
   background-color: transparent;
   cursor: pointer;
   font-size: 3rem;
-  color: #f7fafc;
+  color: $secondary;
 }
 
 .DateInput {
