--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -10,3 +10,14 @@ $BebasNeue-Light: "BebasNeue-Light,Helvetica,Arial,sans-serif";
 
 $Monteserrat-SemiBold: "Monteserrat-SemiBold,Helvetica,Arial,sans-serif";
 $Monteserrat-Light: "Monteserrat-Light,Helvetica,Arial,sans-serif";
+
+$background: #040d25;
+$background-light: #0d1322;
+$primary: #34af9b;
+$secondary-light: #f8fafc;
+$secondary: #e2e8f0;
+$secondary-dark: #94a3b8;
+$error: #fdba74;
+// $warning:
+// $info
+// $success
