--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -11,9 +11,9 @@ $BebasNeue-Light: "BebasNeue-Light,Helvetica,Arial,sans-serif";
 $Monteserrat-SemiBold: "Monteserrat-SemiBold,Helvetica,Arial,sans-serif";
 $Monteserrat-Light: "Monteserrat-Light,Helvetica,Arial,sans-serif";
 
-$background: #040d25;
-$background-light: #0d1322;
-$primary: #34af9b;
+$background: #202124;
+$background-light: #3f4247;
+$primary: #8abeb7;
 $secondary-light: #f8fafc;
 $secondary: #e2e8f0;
 $secondary-dark: #94a3b8;
