--- a/components/LocationPicker/LocationPicker.module.scss
+++ b/components/LocationPicker/LocationPicker.module.scss
@@ -1,29 +1,18 @@
-.LocationPickerInput {
-  border: none;
-  border-bottom: 1px gray solid;
-  outline: none;
-  font-size: 1rem;
-  color: var(--text-color);
-  margin: auto;
-  text-align: center;
-  background-color: transparent;
-}
-
-.LocationSuggestion {
-  display: block;
-  background-color: transparent;
-  outline: 0;
-  border: 0;
-  font-size: 1rem;
-  margin: 8px auto;
-  cursor: pointer;
-  border-radius: 10px;
-  background-color: gray;
-  color: white;
-  padding: 2px 10px;
-  &:hover {
-    font-weight: 500;
-    background-color: var(--text-color);
-    color: white;
-  }
-}
+// .LocationSuggestion {
+//   display: block;
+//   background-color: transparent;
+//   outline: 0;
+//   border: 0;
+//   font-size: 1rem;
+//   margin: 8px auto;
+//   cursor: pointer;
+//   border-radius: 10px;
+//   background-color: gray;
+//   color: white;
+//   padding: 2px 10px;
+//   &:hover {
+//     font-weight: 500;
+//     background-color: var(--text-color);
+//     color: white;
+//   }
+// }
