--- a/components/LocationPicker/LocationPicker.module.scss
+++ b/components/LocationPicker/LocationPicker.module.scss
@@ -1,18 +1,3 @@
-// .LocationSuggestion {
-//   display: block;
-//   background-color: transparent;
-//   outline: 0;
-//   border: 0;
-//   font-size: 1rem;
-//   margin: 8px auto;
-//   cursor: pointer;
-//   border-radius: 10px;
-//   background-color: gray;
-//   color: white;
-//   padding: 2px 10px;
-//   &:hover {
-//     font-weight: 500;
-//     background-color: var(--text-color);
-//     color: white;
-//   }
-// }
+.LocationPicker__input::placeholder {
+  text-decoration: underline;
+}
