--- a/styles/DatePicker.scss
+++ b/styles/DatePicker.scss
@@ -9,11 +9,15 @@
 
 .DateInput {
   background-color: transparent;
-  width: 200px;
+  width: inherit;
 }
 
 .DateInput_input {
-  text-decoration: underline 1px;
+  text-decoration: underline;
+  @media #{$mobile} {
+    padding-left: 1.25rem;
+    text-align: left;
+  }
 }
 
 .SingleDatePicker_picker {
