--- a/styles/DatePicker.scss
+++ b/styles/DatePicker.scss
@@ -15,6 +15,7 @@
 .DateInput_input {
   text-decoration: underline;
   transition: color 2s;
+  min-width: 220px;
   @media #{$mobile} {
     padding-left: 1.25rem;
     text-align: left;
