i50: Fixing event page mobile nav banner; tweaking other css

--- a/components/SpotifyWebPlayer/SpotifyWebPlayer.module.scss
+++ b/components/SpotifyWebPlayer/SpotifyWebPlayer.module.scss
@@ -51,9 +51,18 @@
 .scrollContainer {
   height: 100%;
   overflow-x: hidden;
+  align-self: center;
 
   @media #{$mobile} {
     max-width: 250px;
+  }
+
+  @media #{$tablet}, #{$desktop} {
+    max-width: 355px;
+  }
+
+  @media #{$desktop-large} {
+    max-width: 450px;
   }
 }
 
