--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -3,6 +3,7 @@ $tablet-portrait: "(min-width: 768px) and (max-width: 1024px) and (orientation :
 $tablet-landscape: "(min-width: 768px) and (max-width: 1024px) and (orientation : landscape)";
 $tablet: "(min-width: 768px) and (max-width: 1024px)";
 $desktop: "(min-width: 1025px)";
+$desktop-large: "(min-width: 1200px)";
 
 $BebasNeue-Regular: "BebasNeue-Regular,Helvetica,Arial,sans-serif";
 $BebasNeue-Bold: "BebasNeue-Bold,Helvetica,Arial,sans-serif";
